@@ -1,6 +1,7 @@
 0.9.3
 - In fapolicyd-cli, add a --list option to list rules
 - Change lmdb to use writable mmap for startup performance improvment
+- Change the database to support duplicate keys
 
 0.9.2
 - Split codebase into daemon, library and cli
